apps/base/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  type: LoadBalancer
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
      name: plex
